src/style.css
/* ... */
header#player {
  grid-area: hp;
  height: 0;
  min-height: 100%;
  width: 0;
  min-width: 100%;
}

header#opponent {
  grid-area: ho;
  height: 0;
  min-height: 100%;
  width: 0;
  min-width: 100%;
}

aside#health-container {
  grid-area: ah;
}

main {
  grid-area: mn;
}

section {
  grid-area: se;
}

aside#stats-container {
  grid-area: as;
  display: flex;
  justify-content: flex-end;
}

.backdrop.open {
  display: flex;
}

/* Heading styling */

header#player {
  font-size: 2.4rem;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  position: relative;
  z-index: 1000;
}

header#opponent {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  position: relative;
  z-index: 100;
}

header#opponent > :first-child {
  align-self: flex-end;
  font-size: 1rem;
  color: rgb(112, 112, 112);
  font-weight: normal;
  opacity: 1;
  display: flex;
  align-items: center;
  gap: 8px;
}

#model-credits {
  cursor: pointer;
  transition: 300ms;
}
#model-credits:hover {
  color: white;
}

#created-by-container {
  display: flex;
  align-items: center;
  gap: 8px;
  border-right: 1px solid rgb(112, 112, 112);
  padding-right: 8px;
  transition: 300ms;
}

#created-by-container img {
  width: 20px;
  height: 20px;
  filter: invert(0.6);
  transition: 300ms;
}

#created-by-container:hover img {
  filter: invert(1);
}

#created-by-container:hover {
  color: white;
}

header#opponent #opponent-board-heading {
  /* This is the header that reads "opponent status" */
  transition: 500ms;
  color: rgb(255, 133, 133);
  font-size: 2.4rem;
  font-weight: bold;
  text-align: center;
  opacity: 0;
}

.message-box {
  color: white;
  text-align: center;
  transition: opacity calc(200ms * var(--game-speed));
  opacity: 0.01;
  position: relative;
}

.message-box span.ship {
  color: rgb(255, 118, 118);
}

#model-load-progress-bar {
  width: 200%;
  position: relative;
  left: -50%;
  height: 20px;
}

/* Aside#health styling */

aside#health-container {
  background-color: rgba(255, 255, 255, 0.224);
  border-radius: 24px;
}

aside#health {
  display: flex;
  flex-direction: column;
  padding: 12px;
  gap: 8px;
  min-height: calc(100% - 24px);
  /* position: relative; */
}

/* Target the heading of the panel */
aside#health > :first-child {
  text-align: center;
  font-size: 2rem;
}

/* Target the add ship description */
aside#health > :nth-child(2) {
  text-align: center;
  font-size: 1.2rem;
  line-height: 1.4rem;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
    'Lucida Sans', Arial, sans-serif;
}

#addShipSelection {
  display: flex;
  flex-direction: column;
  margin-top: 12px;
  gap: 12px;
}

#addShipSelection > label {
  cursor: pointer;
  position: relative;
  min-height: 6vh;
  display: flex;
  align-items: center;
}

#addShipSelection input[type='radio'] {
  appearance: none;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
}

#addShipSelection > label *:not(input) {
  pointer-events: none;
}

#addShipSelection img {
  transition: 100ms;
}

#addShipSelection > label:hover img {
  filter: invert(70%);
}

#addShipSelection input[type='radio']:checked + img {
  filter: invert(100%);
}

#addShipSelection label.ship-placed > img {
  filter: invert(70%);
}

#addShipSelection div.ship-placed {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: 30px;
  color: rgb(19, 199, 19);
  font-size: 3rem;
  font-weight: bold;
}

.start-game-button {
  margin-top: 5vh;
  height: 48px;
  border-radius: 16px;
  text-align: center;
  background-color: black;
  color: white;
  font-size: 1.6rem;
  letter-spacing: 1px;
  font-weight: bold;
  border: none;
  transition: background-color 500ms;
  animation: 1.3s linear 0s infinite alternate-reverse both running
    start-button-flash;
  cursor: pointer;
}

.start-game-button:hover {
  background-color: rgb(241, 0, 0);
  animation: none;
}

@keyframes start-button-flash {
  0% {
    background-color: black;
  }
  100% {
    background-color: rgb(173, 0, 0);
  }
}

/* Ship Health Panel */

#health-box-container {
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin-top: 12px;
}

#health .ship-health-container {
  display: grid;
  width: 100%;
  height: 7vh;
  background-color: rgb(226, 226, 226);
  position: relative;
  overflow: hidden;
}

#health .health-box {
  border: 1px solid rgb(20, 152, 18);
  background-color: rgb(208, 228, 208);
}

#health .ship-health-container img {
  position: absolute;
  top: 6px;
  right: 6px;
  bottom: 6px;
  left: 6px;
  z-index: 50;
}

@media screen and (max-height: 450px) {
  #health .ship-health-container {
    height: 4vh;
  }

  #health .ship-health-container img {
    top: 0px;
  }
}

#health .health-box.hit {
  border: 1px solid rgb(152, 18, 18);
  background-color: rgb(229, 141, 141);
}

/* Main styling */

main {
  /* background-color: gray; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  perspective: 800px;
  perspective-origin: center center;
  transform-style: preserve-3d;
  transform-origin: center;
  position: relative;
  z-index: 10;
  bottom: 20px;
  transition: none;
}
/* ... */

